force-app/main/default/objects/OpportunityLineItem/fields/Effective_Price__c.field-meta.xml
<CustomField>
    <fullName>Effective_Price__c</fullName>
    <formula>UnitPrice * Quantity * (1 - Discount/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>