force-app/main/default/objects/OpportunityLineItem/fields/External_Price_Last_Checked__c.field-meta.xml
<CustomField>
    <fullName>External_Price_Last_Checked__c</fullName>
    <label>External Price Last Checked</label>
    <type>DateTime</type>
</CustomField>