force-app/main/default/objects/OpportunityLineItem/fields/External_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>External_Unit_Price__c</fullName>
    <label>External Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>