force-app/main/default/objects/OpportunityLineItem/fields/Is_In_External_Stock__c.field-meta.xml
<CustomField>
    <fullName>Is_In_External_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is In External Stock</label>
    <type>Checkbox</type>
</CustomField>